--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  
   "name": "GoldE-Tea Admin Panel",
   "version": "0.1.0",
   "proxy": "http://newserver:46597",
@@ -17,14 +16,16 @@
     "cra-template": "1.2.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
+    "file-saver": "^2.0.5",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "jszip": "^3.10.1",
     "lottie-react": "^2.4.1",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-country-flag": "^3.1.0",
     "react-countup": "^6.5.3",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-native-dotenv": "^3.4.11",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.1",
@@ -33,7 +34,8 @@
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "web-vitals": "^4.2.4",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "yazl": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
